--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">ALCChallenge2</string>
+    <string name="menu_save">New Travel Deal</string>
+    <string name="menu_logout">Logout</string>
+    <string name="save_deal">save</string>
+    <string name="place">Place</string>
+    <string name="description">Description</string>
+    <string name="amount">Amount</string>
 </resources>
