--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="place">Place</string>
     <string name="description">Description</string>
     <string name="amount">Amount</string>
+    <string name="menu_cancel">Cancel</string>
 </resources>
